arreglar pom.xml y agregar algoritmo